<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
    
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
        <ImageView android:id="@+id/debtor_imageView"
	        android:contentDescription="@string/debtor_desc"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:scaleType="center"
	        android:background="@drawable/person"
	        android:cropToPadding="true" 
	        android:layout_alignParentLeft="true"/>
    	
        <TextView android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debtor_name_text" 
            android:layout_toRightOf="@id/debtor_imageView"
            android:layout_centerVertical="true"
            android:padding="16dp"/>

    </RelativeLayout>
    
    <TextView 
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:padding="0dp"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/debtor_phoneNumber_hint"/>
    
    <TextView android:id="@+id/phone_no_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />
    
    <TextView 
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:padding="0dp"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/amount_textView"/>
    
    <TextView android:id="@+id/amount_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Money"/>
    
    <TextView 
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/date_created_textView"/>
    
    <TextView android:id="@+id/date_created_textView"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="Date created"/>
    
    <TextView 
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/date_due_textView"/>
    
    <TextView android:id="@+id/date_due_textView"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="Date due"/>
    
    <TextView 
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/note_textView"/>
    
    <TextView android:id="@+id/note_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Note"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp" >
        
        <Button android:id="@+id/paid_button"
            style="@style/ActionButtons"
            android:text="Paid" />
        
        <Button android:id="@+id/call_button"
            style="@style/ActionButtons"
            android:text="Call" />
        
        <Button android:id="@+id/sms_button"
            style="@style/ActionButtons"
            android:text="Sms" />
            
        
    </LinearLayout>
    

</LinearLayout>
    
    
</ScrollView>
